--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -37,7 +37,7 @@
                 点击按钮进行验证
             </div>
             <div class="reg-agree">
-                <input type="radio">
+                <input type="checkbox">
                 <span>注册账号即表示您同意并愿意遵守</span>
                 <a href="">Flyme账号服务协议</a>
                 <span>、</span>
