--- a/src/html/login.html
+++ b/src/html/login.html
@@ -17,7 +17,7 @@
       <!-- 头 -->
     <div class="head">
         <div class="container">
-            <a href=""><img src="../img/meizu.png" alt=""></a>
+            <a href="../html/index.html"><img src="../img/meizu.png" alt=""></a>
         </div>
     </div>
     <div class="main">
