--- a/src/html/index.html
+++ b/src/html/index.html
@@ -247,37 +247,37 @@
           </li>
           <li class="other-img">
             <a href="">
-            <img class="lazy" data-original="../img/b3.png" alt="">
+            <img class="lazy" data-original="../img/shop2.jpg" alt="">
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro LED 灯泡</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥49</p>
             </div></a>
           </li>
           <li class="other-img">
             <a href="">
-            <img class="lazy" data-original="../img/b3.png" alt="">
+            <img class="lazy" data-original="../img/shop3.png" alt="">
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro LED 筒灯</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥299</p>
             </div></a>
           </li>
           <li class="other-img" style="margin-right: 0;">
             <a href="">
-            <img class="lazy" data-original="../img/b3.png" alt="">
+            <img class="lazy" data-original="../img/shop4.png" alt="">
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro LED 地脚灯</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥99</p>
             </div></a>
           </li>
           <li>
-            <a href=""><img class="lazy" data-original="../img/b2.jpg" alt=""></a>
+            <a href=""><img class="lazy" data-original="../img/shop1.jpg" alt=""></a>
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro LED 灯泡</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥49</p>
             </div>
           </li>
           <li class="other-img">
@@ -286,25 +286,25 @@
             <div>
               <p>魅族 Lipro LED 橱柜灯</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥199</p>
             </div></a>
           </li>
           <li class="other-img">
             <a href="">
-            <img class="lazy" data-original="../img/b3.png" alt="">
+            <img class="lazy" data-original="../img/shop5.png" alt="">
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro LED 灯带</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥999</p>
             </div></a>
           </li>
           <li class="other-img" style="margin-right: 0;">
             <a href="">
-            <img class="lazy" data-original="../img/b3.png" alt="">
+            <img class="lazy" data-original="../img/shop6.png" alt="">
             <div>
-              <p>魅族 Lipro LED 橱柜灯</p>
+              <p>魅族 Lipro 驱动电源</p>
               <p>博物馆级健康光 RG0 舒适低蓝光 磁吸随贴安装</p>
-              <p>￥269</p>
+              <p>￥249</p>
             </div></a>
           </li>
       </ul>
