--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap 101 Template</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">  
     <link rel="stylesheet" href="../css/index-d.css">
+    <script src="../js/index.js" type="module"></script>
     <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
