--- a/src/html/index1.html
+++ b/src/html/index1.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 101 Template</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/index-d.css">
+    <!-- <link rel="stylesheet" href="../css/index-d.css"> -->
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="../js/index.js" type="module"></script>
     <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
@@ -868,17 +870,17 @@
             </div>
             <div class="foot-2r">
               <a href=""><img class="lazy" data-original="../img/ce1.png" alt="">
-              <img class="lazy" data-original="../img/ce1hover.png" alt="">
-               <img class="lazy" data-original="../img/ce5.png" alt=""> 
+              <img class="lazy" src="../img/ce1hover.png" alt="">
+               <img class="lazy" src="../img/ce5.png" alt=""> 
             </a>
               <a href=""><img class="lazy" data-original="../img/ce2.png" alt="">
-              <img class="lazy" data-original="../img/ce2hover.png" alt="">
-                <img class="lazy" data-original="../img/ce6.jpg" alt="">
+              <img class="lazy" src="../img/ce2hover.png" alt="">
+                <img class="lazy" src="../img/ce6.jpg" alt="">
             </a>
               <a href=""><img class="lazy" data-original="../img/ce3.png" alt="">
-              <img class="lazy" data-original="../img/ce3hover.png" alt=""></a> 
+              <img class="lazy" src="../img/ce3hover.png" alt=""></a> 
               <a href=""><img class="lazy" data-original="../img/ce4.png" alt="">
-              <img class="lazy" data-original="../img/ce4hover.png" alt=""></a> 
+              <img class="lazy" src="../img/ce4hover.png" alt=""></a> 
             </div>
           </div>
       </div>
