--- a/src/html/login.html
+++ b/src/html/login.html
@@ -22,13 +22,13 @@
     <div class="main">
         <img src="../img/dl1.png" alt="">
         <div class="container">
-            <form action="" class="main-form">
+            <form action="../../interface/login.php" class="main-form" method="GET">
               <a href=""><img src="../img/login1.png" alt=""></a>
             <div class="phone-code-login">
                 <h3>验证码登录</h3>
                 <div class="phonetext">
                     <span> <input type="text" value="+86"></span>
-                   <input type="text" placeholder="手机号码"></div>
+                   <input type="text" placeholder="手机号码" name="username"></div>
                             
             </div>
             <!-- 登录键 -->
@@ -38,6 +38,7 @@
                 <a href="../html/reg.html" >注册</a>
                 <a href="" class="login-forget-f">忘记密码?</a>
             </div>
+            <input type="submit">
         </form>
         </div>
         
