--- a/src/html/product1.html
+++ b/src/html/product1.html
@@ -165,7 +165,7 @@
           <p>
             选择数量
           </p>
-          <input type="number" value="1" max="10" min="1">
+          <input type="number" value="1" max="10" min="1" id="_num">
         </div>
         <hr>
         <!-- 已选 -->
@@ -173,7 +173,7 @@
           <p><small>￥</small><span class="property-price-t">39</span> <span class="pro-done-buy">已选：魅族中国红 Type-C 金属编织线、红色、1.2米、全款、1件</span></p>
         </div>
         <!-- 加入购物车 -->
-        <a href="" class="add-car">加入购物车</a>
+        <a href="../html/shopping.html" class="add-car" target="_blank">加入购物车</a>
       </div>
 
 
