--- a/src/html/shop-car-empty.html
+++ b/src/html/shop-car-empty.html
@@ -15,7 +15,7 @@
   <body>
     <header>
         <div class="container shop-car-head p0">
-            <a href="../html/login.html"><img src="../img/meizu3.png" alt=""></a>
+            <a href="../html/index1.html"><img src="../img/meizu3.png" alt=""></a>
             <ul class="shop-car-l">
                 <li>购物车</li>
                 <li>确认订单</li>
