--- a/src/html/shopping.html
+++ b/src/html/shopping.html
@@ -13,13 +13,14 @@
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
     <script src="../js/shop.js" type="module"></script>
+    <script src="../js/shopping.js" type="module"></script>
 </head>
 <body>
     <!-- 导航 -->
     <div class="layout-header">
         <div class="container">
             <div class="layout-header-logo">
-                <a href="../html/index.html">
+                <a href="../html/index1.html">
                     <img src="../img/meizu3.png" alt="">
                 </a>
             </div>
@@ -37,7 +38,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <span>toohyk</span>的商城
+                        <span>banban</span>的商城
                         <i></i>
                     </a>
                 </li>
@@ -54,7 +55,7 @@
                     <tr>
                         <td class="cart-col-select">
                             <div class="cart-select-all">
-                                <input type="checkbox" class="mz-checkbox" style="position: absolute;
+                                <input type="checkbox" class="mz-checkbox check-all" style="position: absolute;
                                 top: 13px">
                                 <span class="cart-select-title" style="text-indent: 25px;">全选</span>
                             </div>
@@ -69,8 +70,8 @@
                     <li class="cart-merchant">
                         <div class="cart-merchant-header">
                             <div class="cart-select-all">
-                                <input type="checkbox" class="mz-checkbox" style="position: absolute;
-                                top: 160px">
+                                <!-- <input type="checkbox" class="mz-checkbox" style="position: absolute;
+                                top: 160px"> -->
                                 <span class="cart-select-title" style="text-indent: 25px;">魅族官方商城</span>
                             </div>
                         </div>
@@ -137,7 +138,7 @@
                 <div class="mzcontainer">
                     <div class="cart-footer-left">
                         <div class="cart-select-all">
-                            <input type="checkbox" class="mz-checkbox">
+                            <input type="checkbox" class="mz-checkbox check-all">
                             <span class="cart-select-title">全选</span>
                         </div>
                         <span class="cart-remove-selected">删除选中商品</span>
