--- a/src/html/shopping.html
+++ b/src/html/shopping.html
@@ -66,7 +66,7 @@
                         <td class="cart-col-ctrl">编辑</td>
                     </tr>
                 </table>
-                <ul class="cart-merchant-list">
+                <ul class="cart-merchant-list _table">
                     <li class="cart-merchant">
                         <div class="cart-merchant-header">
                             <div class="cart-select-all">
@@ -149,7 +149,7 @@
                     </div>
                     <div class="cart-footer-right">
                         <span class="cart-footer-sum">
-                            以优惠<span class="cart-footer-num red">0.00</span>元,
+                            已优惠<span class="red">0.00</span>元,
                             合计：(不含运费)<span class="cart-footer-total">0.00</span>
                         </span>
                         <div class="mz-btn">
