--- a/src/html/shopping.html
+++ b/src/html/shopping.html
@@ -143,7 +143,7 @@
                         </div>
                         <span class="cart-remove-selected">删除选中商品</span>
                         <span class="cart-footer-count">
-                            共<span class="cart-footer-num">1</span>件商品,
+                            共<span class="cart-footer-num">0</span>件商品,
                             已选择<span class="cart-footer-num blue">0</span>件
                         </span>
                     </div>
@@ -152,7 +152,7 @@
                             已优惠<span class="red">0.00</span>元,
                             合计：(不含运费)<span class="cart-footer-total">0.00</span>
                         </span>
-                        <div class="mz-btn">
+                        <div class="mz-btn" style="line-height: 37px;">
                             去结算
                         </div>
                     </div>
