--- a/src/html/index1.html
+++ b/src/html/index1.html
@@ -187,7 +187,7 @@
                          <li><a href="">M码通道</a></li>
                      </ul>
                   </div>
-                  <a href="./shop-car-empty.html" target="_blank"><img class="lazy" src="../img/head2.png" alt="" class="lazy" ></a>
+                  <a href="./shopping.html" target="_blank"><img class="lazy" src="../img/head2.png" alt="" class="lazy" ></a>
               </div>
           </div>
       </div>
